force-app/main/default/objects/Assignment__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND ((2 AND 4) OR (3 AND 5))</booleanFilter>
        <filterItems>
            <field>Person__c.Person_Role_Formula__c</field>
            <operation>contains</operation>
            <value>1</value>
        </filterItems>
        <filterItems>
            <field>$Source.Service_Case__c</field>
            <operation>equals</operation>
            <valueField>Person__c.Service_Case__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Investigation__c</field>
            <operation>equals</operation>
            <valueField>Person__c.Investigation__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Service_Case__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.Investigation__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>