force-app/main/default/objects/Assignment__c/fields/CPS_Response_Type__c.field-meta.xml
<CustomField>
    <fullName>CPS_Response_Type__c</fullName>
    <formula>TEXT( Investigation__r.CPS_Response_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPS Response Type</label>
    <type>Text</type>
</CustomField>