force-app/main/default/objects/Assignment__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>IF
(  
NOT( ISBLANK( Service_Case__c ) ) ,  Service_Case__r.CreatedDate ,  
IF
(  NOT( ISBLANK( Investigation__c ) ) ,  Investigation__r.CreatedDate  ,
IF
(  NOT( ISBLANK(Intake__c ) ) ,  Intake__r.CreatedDate  , null
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Date</label>
    <type>DateTime</type>
</CustomField>