force-app/main/default/objects/Assignment__c/fields/Danger__c.field-meta.xml
<CustomField>
    <fullName>Danger__c</fullName>
    <formula>IF(
  NOT( ISBLANK( Service_Case__c ) ) ,  Service_Case__r.Danger__c ,   
IF( 
 NOT( ISBLANK( Investigation__c ) ) , Investigation__r.Danger__c, 
IF( 
 NOT( ISBLANK( Intake__c  ) ) , Intake__r.Danger__c , &apos;&apos;
) 
)  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Danger</label>
    <type>Text</type>
</CustomField>