force-app/main/default/objects/Assignment__c/fields/Head_of_Household__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Household__c</fullName>
    <formula>IF( 
 NOT( ISBLANK( Service_Case__c ) ) ,  Service_Case__r.Head_of_Household__r.FirstName  &amp;  &apos; &apos; &amp; Service_Case__r.Head_of_Household__r.MiddleName &amp; &apos; &apos; &amp;   Service_Case__r.Head_of_Household__r.LastName  &amp; &apos; &apos; &amp; Service_Case__r.Head_of_Household__r.Suffix , 
 IF(  NOT( ISBLANK( Investigation__c ) ) , Investigation__r.Head_of_Household__r.FirstName &amp; &apos; &apos; &amp;  Investigation__r.Head_of_Household__r.MiddleName  &amp; &apos; &apos; &amp;  Investigation__r.Head_of_Household__r.LastName &amp; &apos; &apos;  &amp;  Investigation__r.Head_of_Household__r.Suffix, 
IF(  NOT( ISBLANK(Intake__c ) ) , Intake__r.contact__r.FirstName &amp; &apos; &apos; &amp;  Intake__r.contact__r.MiddleName  &amp; &apos; &apos; &amp;  Intake__r.contact__r.LastName &amp; &apos; &apos;  &amp;  Intake__r.contact__r.Suffix, &apos;&apos;
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head of Household</label>
    <type>Text</type>
</CustomField>