force-app/main/default/objects/Assignment__c/fields/Intake_ID__c.field-meta.xml
<CustomField>
    <fullName>Intake_ID__c</fullName>
    <formula>IF(  NOT(ISBLANK( Service_Case__c ))  ,   Service_Case__r.Intake__r.CaseNumber  ,   IF(  NOT( ISBLANK( Investigation__c ) ) ,  Investigation__r.Intake__r.CaseNumber , &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake ID</label>
    <type>Text</type>
</CustomField>