force-app/main/default/objects/Assignment__c/fields/Intake_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Intake_Purpose__c</fullName>
    <formula>TEXT(Intake__r.Origin)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Purpose</label>
    <type>Text</type>
</CustomField>