force-app/main/default/objects/Assignment__c/fields/Intake_Status__c.field-meta.xml
<CustomField>
    <fullName>Intake_Status__c</fullName>
    <formula>Intake__r.Intake_Approval_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Status</label>
    <type>Text</type>
</CustomField>