force-app/main/default/objects/Assignment__c/fields/Is_Assigned_user_same_as_current_user__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned_user_same_as_current_user__c</fullName>
    <description>Used in Casevault user dashboard</description>
    <formula>Select_a_Social_Worker__c  =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Assigned user same as current user</label>
    <type>Checkbox</type>
</CustomField>