force-app/main/default/objects/Assignment__c/fields/Is_this_under_supervisor__c.field-meta.xml
<CustomField>
    <fullName>Is_this_under_supervisor__c</fullName>
    <formula>Select_a_Social_Worker__r.ManagerId  =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in supervisor dashboard</inlineHelpText>
    <label>Is this under supervisor</label>
    <type>Checkbox</type>
</CustomField>