force-app/main/default/objects/Assignment__c/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <formula>Intake__r.Received_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Date</label>
    <type>DateTime</type>
</CustomField>