force-app/main/default/objects/Assignment__c/fields/Select_a_Social_Worker__c.field-meta.xml
<CustomField>
    <fullName>Select_a_Social_Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Casevault User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>