force-app/main/default/objects/Assignment__c/listViews/Investigations_Supervisors.listView-meta.xml
<ListView>
    <fullName>Investigations_Supervisors</fullName>
    <booleanFilter>(1 AND 2) AND (3 OR 4)</booleanFilter>
    <columns>Danger__c</columns>
    <columns>Investigation__c</columns>
    <columns>Intake_ID__c</columns>
    <columns>Head_of_Household__c</columns>
    <columns>CPS_Response_Type__c</columns>
    <columns>Select_a_Social_Worker__c</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Investigation__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Is_this_under_supervisor__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Assign_End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Assign_End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Investigations</label>
    <sharedTo>
        <group>Casevault_Supervisor</group>
    </sharedTo>
</ListView>