force-app/main/default/objects/Assignment__c/listViews/Pending_Service_Case.listView-meta.xml
<ListView>
    <fullName>Pending_Service_Case</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4) AND (5 OR 6)</booleanFilter>
    <columns>Danger__c</columns>
    <columns>Service_Case__c</columns>
    <columns>Intake_ID__c</columns>
    <columns>Head_of_Household__c</columns>
    <columns>Status__c</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Case__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Is_Assigned_user_same_as_current_user__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Reopen</value>
    </filters>
    <filters>
        <field>Assign_End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Assign_End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Pending Service Case</label>
    <sharedTo>
        <group>Casevault_User</group>
    </sharedTo>
</ListView>